syntax = "proto3";

option go_package = ".;pb";
option java_multiple_files = true;
option java_package = "com.aapanavyapar.aapanavyapar.services";

message Location {
  string Longitude = 9;
  string Latitude = 10;
}

message TrendingData {
  string subCategory = 11;
  string productImage = 12;
  string productName = 13;
  string shopName = 14;
  string shortDescription = 15;
  string shopRating = 16;
  int64 productLikes = 17;

}

message GetTrendingCategoriesRequest {
  string apiKey = 1;
  string token = 2;
}

message GetTrendingCategoriesResponse {
  repeated string categoryData = 3;
}

message GetTrendingDataByCategoriesRequest {
  string apiKey = 4;
  string token = 5;
  uint32 categoryId = 6;
  Location location = 7;
}

message GetTrendingDataByCategoriesResponse {
  TrendingData trendingData = 8;
}

/*
Store the trends in trends Hash Map.
Get All the trends by hkys form hash.

Hash Map Name is of Main Category and it contains key = subcategory and value = productIds array

*/
